$Id: Changelog.txt,v 1.47 2016/12/16 09:22:35 nanard Exp $

2018/02/03:
	Properly parse several requests read() at once
	Ignore the version of devices while answering to requests

2016/11/11:
	Fix for Solaris build

2016/03/01:
	Fix broken overflow test (p+l > buf+n) thanks to Salva Peiro

VERSION 1.5:

2016/01/13:
	add "notification" mode (command 5)

2015/08/06:
	disable multicast loop
	add -f command line option to filter for a specific device type

VERSION 1.4:

2015/08/06:
	added command 0 (version)

2015/07/21:
	set multicast TTL to 2 by default and configurable

2015/05/27:
	support larger buffer size (useful for type 3 requests)

VERSION 1.3:

2014/12/05:
	clean up select call()
	fix non blocking write to sockets

2014/12/04:
	Fixes removing of devices on ssdp:byebye
	handle ssdp:update messages

2014/11/28:
	revert "listen on only 1 IPv4 if only 1 interface is specified"
	because it prevents broadcast messages to be received
	Change the list of LAN addresses/interfaces (code taken from miniupnpd)
	Check that the peer is from a LAN for each SSDP packet

2014/11/06:
	listen on only 1 IPv4 if only 1 interface is specified
	also when ENABLE_IPV6 is not defined

2014/09/06:
	freebsd-glue for Debian/kFreeBSD
	use LDFLAGS when linking binary

2014/05/01:
	listen on only 1 IPv4 if only 1 interface is specified

2014/02/03:
	silently ignore EAGAIN, EWOULDBLOCK, EINTR of recv calls
	Discover devices on the network at startup

2013/08/19:
	Translate README in english

2012/09/27:
	Rename all include guards to not clash with C99
	(7.1.3 Reserved identifiers).

VERSION 1.2:

2012/05/21:
	Clean signal handling
	Set sockets non blocking

2012/05/18:
	Improve ProcessInterfaceWatch() under BSD.

2012/05/15:
	Improve ProcessInterfaceWatch() under linux.

2012/05/02:
	Clean CLFAGS in Makefile.
	Remove a few signed/unsigned compares

2012/04/09:
	Added -ansi to compilation flags.
	Handle ssdp:update messages and update logging

2012/01/02: