@@ -1,12 +1,14 @@
-/* $Id: asyncsendto.h,v 1.2 2014/05/19 14:21:10 nanard Exp $ */
+/* $Id: asyncsendto.h,v 1.3 2017/11/02 15:48:29 nanard Exp $ */
 /* MiniUPnP project
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
- * (c) 2006-2014 Thomas Bernard
+ * (c) 2006-2017 Thomas Bernard
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
 
 #ifndef ASYNCSENDTO_H_INCLUDED
 #define ASYNCSENDTO_H_INCLUDED
+/* for fd_set */
+#include <sys/select.h>
 
 /* sendto_schedule() : see sendto(2)
  * schedule sendto() call after delay (milliseconds) */
